# nightwatch

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pypi.yml  tauri-publish.yml
nightwatch/: __main__.py  config.py  logging.py
nightwatch/auth/: __init__.py  models.py
nightwatch/bot/: __init__.py  client.py  types.py
nightwatch/client/: __init__.py  config.py
nightwatch/client/extra/: select.py  ui.py  wswrap.py
nightwatch/client/extra/commands/: __init__.py
nightwatch/client/extra/iipython/iikp/: read.py
nightwatch/desktop/: index.js  package-lock.json  package.json
nightwatch/desktop/src/: index.html
nightwatch/desktop/src-tauri/: Cargo.toml  tauri.conf.json
nightwatch/desktop/src-tauri/capabilities/: default.json
nightwatch/desktop/src-tauri/icons/: icon.icns
nightwatch/desktop/src/css/: index.css  lib.bundle.css  main.css  soda.css
nightwatch/desktop/src/frames/: settings.html  welcome.html
nightwatch/desktop/src/frames/auth/: login.html  signup.html
nightwatch/desktop/src/frames/errors/: login.html  network.html
nightwatch/desktop/src/frames/server/: add.html  chat.html  notice.html
nightwatch/desktop/src/js/: frame.js  lib.bundle.js  main.js  nightwatch.js
nightwatch/desktop/src/js/bootstrap/: dropdown.js
nightwatch/desktop/src/js/frames/: auth.js
nightwatch/desktop/src/js/lib/: nanoid.min.js  tauri.store.min.js
nightwatch/server/: __init__.py  __main__.py  patches.py
nightwatch/server/core/: __init__.py
nightwatch/server/utils/: __init__.py  commands.py  constant.py  models.py  websocket.py
