[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nightwatch"]

[project]
name = "nightwatch-chat"
version = "0.0.1"
authors = [
    { name = "iiPython", email = "ben@iipython.dev" },
]
description = "The chatting application to end all chatting applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iiPythonx/nightwatch"
Issues = "https://github.com/iiPythonx/nightwatch/issues"

[project.scripts]
nightwatch = "nightwatch.__main__:main"
